syntax = "proto3";

option go_package = "./pb";

package pb;

message File{
  int64 Id = 1;
  int64 Created_at = 2;
  int64 Updated_at = 3;
  int64 Deleted_at = 4;
  string Name = 5;
  string Type = 6;
  string Path = 7;
  string Size = 8;
  string ShareLink = 9;
  int64 ParentId = 10;
}

message File_in{
  string Name = 1;
  string Type = 2;
  string Path = 3;
  string Size = 4;
  string ShareLink = 5;
  int64 Updated_at = 6;
}

message FileUploadReq{
  string Name = 1;
  string Type = 2;
  string SourcePath = 3;
}

message FileUploadResp {
  string Error = 1;
}

message UploadPictureReq {
  string Md5 = 1; // md5值
  int64 Id = 2; // 用户Id
  bytes Picture = 3; // 头像字节数组
}

message UploadPictureResp {
  string Error = 1;
}

message FileDownloadReq{
  int64 Id = 1;
  string Name = 2;
  string Type = 3;
}

message FileDownloadResp {
  string flag = 1;
  string Error = 2;
}

message FileListReq{
  int64 Id = 1;
  int64 Page = 2;
  int64 Size = 3;
  string Field = 4;
  bool ASC = 5;
}

message FileListResp{
  repeated File_in List = 1;
  int64 Count = 2;
  string Error = 3;
}

message FileNameUpdateReq{
  int64 Id = 1;
  string Name = 2;
}

message FileNameUpdateResp{
  string Error = 1;
}

message FileCreateReq{
  int64 ParentId = 1;
  string Name = 2;
}

message FileCreateResp{
  string Error = 1;
}

message FileDeletionReq{
  repeated int64 ParentId = 1;
  repeated int64 Id = 2;
}

message FileDeletionResp{
  string Error = 1;
}

message FileMoveReq{
  int64 LastParentId = 1;
  int64 PreParentId = 2;
  int64 Id = 3;
}

message FileMoveResp{
  string Error = 1;
}

message FileShareReq{
  int64 Id = 1;
}

message FileShareResp{
  string ShareLink = 1;
  string Error = 2;
}

message FileShareSaveReq{
  int64 ParentId = 1;
  string ShareLink = 2;
  string Name = 3;
}

message FileShareSaveResp{
  int64 Id = 1;
  string Error = 2;
}

message FileDetailsReq{
  int64 Id = 1;
}

message FileDetailsResp{
  string Name = 1;
  string Type = 2;
  string Path = 3;
  string Size = 4;
  string Time = 5;
  string Error = 6;
}

service filecenter {
  rpc FileUpload(FileUploadReq) returns (FileUploadResp);
  rpc FileDownload(FileDownloadReq) returns (FileDownloadResp);
  rpc FileList(FileListReq) returns (FileListResp);
  rpc FileNameUpdate(FileNameUpdateReq) returns (FileNameUpdateResp);
  rpc FileCreate(FileCreateReq) returns (FileCreateResp);
  rpc FileDeletion(FileDeletionReq) returns (FileDeletionResp);
  rpc FileMove(FileMoveReq) returns (FileMoveResp);
  rpc FileShare(FileShareReq) returns (FileShareResp);
  rpc FileShareSave(FileShareSaveReq) returns (FileShareSaveResp);
  rpc FileDetails(FileDetailsReq) returns (FileDetailsResp);
  rpc UploadPicture(UploadPictureReq) returns (UploadPictureResp);
}